--- a/software/static/index.html
+++ b/software/static/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>It's Lit</title>
+
+    <link rel="shortcut icon" type="image/jpg" href="favicon.ico" />
   </head>
   <body>
     <div id="app-root">Loading...</div>
