added the right static files in server and index.html

--- a/software/static/index.html
+++ b/software/static/index.html
@@ -7,8 +7,12 @@
     <title>It's Lit</title>
 
     <link rel="shortcut icon" type="image/jpg" href="favicon.ico" />
+    <link rel="icon" type="image/jpg" href="favicon.ico" />
+
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <div id="app-root">Loading...</div>
+    <script src="main.js" type="text/javascript"></script>
   </body>
 </html>
